envoy-config.yaml
# admin web panel
admin:
  access_log_path: ./admin_logs
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901

static_resources:
  listeners:
    - name: grpc-listener
      address:
        socket_address:
          protocol: TCP
          address: 0.0.0.0
          port_value: 8000
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: grpc-filter
                http_filters:
                  - name: envoy.filters.http.router
                access_log:
                  - name: envoy.access_loggers.file
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                      path: ./access_logs
                route_config:
                  name: grpc-filter-router
                  virtual_hosts:
                    - name: catch-all-grpc-host
                      domains:
                        - "*"
                      routes:
                        - name: some-route
                          match:
                            prefix: "/"
                            # match the content-type header to allow only grpc requests.
                            headers:
                              - name: content-type
                                exact_match: application/grpc
                          route:
                            cluster: hello-service

  clusters:
    - name: hello-service
      type: static
      connect_timeout: 2s
      # TODO: these http_protocol config are deprecated. we should move to the
      # new way of configuring these settings.
      common_http_protocol_options:
        idle_timeout: 1s
      http2_protocol_options:
        max_concurrent_streams: 100

      lb_policy: round_robin
      load_assignment:
        cluster_name: hello-service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 7000
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 7001
